fix gaps

--- a/gameStyle.css
+++ b/gameStyle.css
@@ -34,8 +34,5 @@ body {
     width: 100vw;
     box-sizing: border-box;
     margin: 0;
-    position: relative;
-    left: 0;
-    top: 0;
 }
   
